css/master.css
:root {
  --accent-color: #fff;
}

::-webkit-scrollbar {
  width: 0;
  background: 0 0
}

::selection {
  background: var(--accent-color)
}
::-moz-selection {
  background: var(--accent-color)
}

body,
html {
  font-family: 'Lato', sans-serif;
  margin: auto;
  padding: 0;
  height: 100vh;
  width: 100vw;
}

.space {
  width: 100%;
  height: 100px
}

.fade-in {
  width: 100%;
  height: 100%;
  background: #000;
  position: fixed;
  z-index: 1;
  opacity: 1;
  -webkit-transition: background 1000ms ease-in-out;
  transition: background 1000ms ease-in-out;
}

